# tezos-ci

./: .gitignore  .gitmodules  .ocamlformat  Dockerfile  README.md  deploy.sh  dune  dune-project  dune-workspace  stack.yml  tezos-ci.opam  tezos-ci.opam.template  tezos-setup.opam
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/: gitlab.md
src/: analyse.ml  analyse.mli  build.ml  build.mli  coverage.ml  dune  integration.ml  integration.mli  logging.ml  logging.mli  main.ml  packaging.ml  packaging.mli  tezos_ci.ml  tezos_ci_local.ml  tezos_repository.ml  tezos_repository.mli  tezt.ml  variables.ml  version.ml
src/analysis/: analyse.ml  analyse.mli  dune  tezos_repository.ml  tezos_repository.mli  variables.ml  variables.mli
src/gitlab/: conf.ml  dune  main.ml  pipeline.ml
src/lib/: builder.ml  builder.mli  dune  fetch.ml  fetch.mli  lib.ml  task.ml  task.mli
src/logging/: dune  logging.ml  logging.mli
src/octez/: dune  pipeline.ml  pipeline.mli
src/pipeline/: creation_date.ml  dune  pipeline.ml  pipeline.mli
src/stages/: base_image.ml  build.ml  build.mli  coverage.ml  coverage.mli  doc.ml  doc.mli  dune  integration.ml  integration.mli  lints.ml  lints.mli  packaging.ml  packaging.mli  publish.ml  publish.mli  stages.ml  task.ml  task.mli  test_doc_scripts.ml  test_doc_scripts.mli  test_liquidity_baking_scripts.ml  tezt.ml  tezt.mli  unittest.ml  unittest.mli
src/website/: css.ml  dune  index.ml  index.mli  projects.ml  static.ml  website.ml
tezos-setup-cli/: config.ml  dune  main.ml  project_hook.ml
