(executable
 (public_name tezos-ci)
 (package tezos-ci)
 (name tezos_ci)
 (modules tezos_ci)
 (libraries
  dune-build-info
  current
  current.fs
  current.cache
  current_git
  current_web
  current_gitlab
  capnp-rpc-unix
  astring
  dockerfile
  cmdliner
  lwt
  lwt.unix
  obuilder-spec
  opam-file-format
  tezos-ci.analysis
  tezos-ci.logging
  tezos-ci.octez
  tezos-ci.website))

(executable
 (public_name tezos-ci-local)
 (package tezos-ci)
 (name tezos_ci_local)
 (modules tezos_ci_local)
 (libraries
  dune-build-info
  current
  current.fs
  current.cache
  current_git
  current_web
  current_gitlab
  capnp-rpc-unix
  astring
  dockerfile
  cmdliner
  obuilder-spec
  opam-file-format
  tezos-ci.analysis
  tezos-ci.logging
  tezos-ci.octez
  tezos-ci.website))
